Fix drawer tab overflow on width smaller than 360px

--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,7 @@ ul li {
   box-shadow: inset 0 0 50px rgb(48, 128, 255, 255);
   padding: 1rem;
   cursor: pointer;
-  z-index: 1000;
+  z-index: 100000000000000000;
 }
 
 .open-drawer {
@@ -325,5 +325,13 @@ ul li {
   }
   to {
     opacity: 1;
+  }
+}
+
+@media only screen and (max-width: 360px) {
+  .container-left {
+    left: 15.25rem;
+    border: none;
+    border-radius: 0 0 0 0.5rem;
   }
 }
